# ICI-computational-resources

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
applications/ai-architecture-analysis/: README.md  manifest.json  quick_start_output.txt
applications/ai-architecture-analysis/appendix/: README.md  source_ai_complexity_v3.docx
applications/ai-architecture-analysis/code/: architecture_extraction_notes.py  parameter_mapping.py  rt_timeseries.py  validation_hooks.py
applications/ai-architecture-analysis/data/: ai_architecture_cases_template.csv
applications/ai-architecture-analysis/docs/: book_appendix_notice.md  domain_mapping_notes.md  program_migration_plan.md  reproducibility_notes.md
applications/ai-architecture-analysis/examples/: quick_start_ai_architecture.py
applications/ecological-crisis/: README.md  manifest.json  quick_start_output.txt
applications/ecological-crisis/appendix/: README.md  (+1 more)
applications/economic-crisis/: README.md  manifest.json
applications/empire-collapse/: README.md
applications/human-social-transition/: README.md
archive/: source_appendix_A_F.docx
data/: cs_ici_db_sample.csv
docs/: SOP-01_parameter_extraction.md  SOP-02_rt_timeseries_monitoring.md  appendix_A.md  appendix_A_F_full.md  appendix_B.md  appendix_C.md  appendix_D.md  appendix_E.md  appendix_F.md  index.md  repository_usage_cn.md
examples/: quick_start.py  rome_analysis.py
src/ici/: __init__.py  calibration.py  core.py  crossdomain.py  csd.py  visualization.py
templates/: parameter_record_template.csv
(+63 files in other folders)
