[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ici-computational-resources"
version = "0.1.0"
description = "Companion computational resources for the ICI framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "EQT Researcher"}
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.2.0",
  "matplotlib>=3.7.0",
  "plotly>=5.14.0",
  "statsmodels>=0.14.0"
]

[tool.setuptools.packages.find]
where = ["src"]
